app_python/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-python
  labels:
    app: app-python
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    nodePort: 30080
    protocol: TCP
  selector:
    app: app-python
